singlepage/medea/kustomize/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medea
spec:
  template:
    spec:
      containers:
        - name: main
          image: ko://go.seankhliao.com/mono/singlepage/medea
          ports:
            - name: http
              containerPort: 8080
