singlepage/medea/kustomize/virtualservice.k8s.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: medea
spec:
  hosts:
    - medea.seankhliao.com
  gateways:
    - knative-serving/knative-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: medea
